<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.solo.MainActivity">
    <item android:id="@+id/datosPersonales"
        android:title="Datos personales"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/stats"
        android:orderInCategory="101"
        android:title="@string/estadisticas"
        app:showAsAction="never" />
    <item
        android:id="@+id/add"
        android:orderInCategory="102"
        android:title="@string/add"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mod"
        android:orderInCategory="103"
        android:title="@string/modificar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear"
        android:orderInCategory="104"
        android:title="@string/borrar"
        app:showAsAction="never"/>
</menu>