<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fechaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/fechaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"/>
        </LinearLayout>

    <TextView
        android:id="@+id/distTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanciaTxt" 
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/distanciaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:maxLength="6"
        android:inputType="number"
        android:hint="@string/_00"
        android:textSize="20sp"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/horasTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/horasTxt"
        android:textSize="30sp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/minsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/minsTxt"
        android:textSize="30sp"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/segsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segsTxt"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:textSize="30sp"
        android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/horasEditText"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:hint="@string/_00"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/minutosEditText"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:hint="@string/_00"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/segundosEditText"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:hint="@string/_00"
            android:maxLength="2"/>
    </LinearLayout>
</LinearLayout>